# GreenGait

./: .cache_ggshield  .gitignore  README.md
backend/: Cargo.toml
backend/src/: README.md  blockchain.rs  config.rs  main.rs  mqtt.rs  security.rs  state.rs
firmware/: ESP32.ino
frontend/: index.html  manifest.json  script.js  style.css  sw.js
solana/: Cargo.toml
solana-program/: Anchor.toml  package-lock.json  package.json
solana-program/programs/greengait_program/: Cargo.toml
solana-program/programs/greengait_program/src/: lib.rs
solana-program/tests/: greengait_program.ts
solana-program/types/solana__spl-token/: index.d.ts
