[package]
name = "greengait_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rumqttc = "0.18"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["fs"] }
hyper = { version = "1", features = ["full"] }
axum = "0.7"
once_cell = "1.19"
axum-server = "0.5"


hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
chrono = "0.4"  
dotenv = "0.15" 
hex = "0.4"
rustls-pemfile = "1.0"
borsh = "0.10"
greengait_program = { path = "../greengait_program/programs/greengait_program"}
anchor-lang = "0.30.1" 
solana-sdk = "1.18.13"
anyhow = "1.0"
solana-client = "1.18.13"
anchor-client = { version = "0.30.1", features = ["async"] }
spl-associated-token-account = "1.1.1"
spl-token = "3.5.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }